# graphqxl

./: Cargo.toml
.github/workflows/: napi.yml
graphqxl-napi/: CHANGELOG.md  Cargo.toml  README.md  example.js  example.ts  index.d.ts  index.js  package.json
graphqxl-napi/__test__/: index.spec.mjs
graphqxl-napi/npm/android-arm-eabi/: README.md  package.json
graphqxl-napi/npm/android-arm64/: README.md  package.json
graphqxl-napi/npm/darwin-arm64/: README.md  package.json
graphqxl-napi/npm/darwin-universal/: README.md  package.json
graphqxl-napi/npm/darwin-x64/: README.md  package.json
graphqxl-napi/npm/freebsd-x64/: README.md  package.json
graphqxl-napi/npm/linux-arm-gnueabihf/: README.md  package.json
graphqxl-napi/npm/linux-arm-musleabihf/: README.md  package.json
graphqxl-napi/npm/linux-arm64-gnu/: README.md  package.json
graphqxl-napi/npm/linux-arm64-musl/: README.md  package.json
graphqxl-napi/npm/linux-riscv64-gnu/: README.md  package.json
graphqxl-napi/npm/linux-x64-gnu/: README.md  package.json
graphqxl-napi/npm/linux-x64-musl/: README.md  package.json
graphqxl-napi/npm/win32-arm64-msvc/: README.md  package.json
graphqxl-napi/npm/win32-ia32-msvc/: README.md  package.json
graphqxl-napi/npm/win32-x64-msvc/: README.md  package.json
graphqxl-napi/src/: lib.rs
graphqxl-node/: Cargo.toml  package.json
graphqxl-node/src/: lib.rs
graphqxl_parser/src/: ast_spec.rs
